src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ALL
    DISJOINTCLASSES
    DISJOINTWITH
    EXACTLY
    IDENTIFICADOR_INDIVIDUO
    INDIVIDUALS
    MAX
    NOT
    SUBCLASSOF
    THAT

Grammar

Rule 0     S' -> ontologia
Rule 1     ontologia -> declaracao_classe_definida
Rule 2     ontologia -> ontologia declaracao_classe_definida
Rule 3     declaracao_classe_definida -> CLASS IDENTIFICADOR_CLASSE EQUIVALENTTO tipo_classe_definida
Rule 4     tipo_classe_definida -> classe_enumerada
Rule 5     tipo_classe_definida -> classe_coberta
Rule 6     tipo_classe_definida -> classe_aninhada
Rule 7     classe_enumerada -> SIMBOLO_ESPECIAL identificadores_classe_sequencia SIMBOLO_ESPECIAL
Rule 8     classe_coberta -> identificadores_classe_sequencia
Rule 9     classe_aninhada -> IDENTIFICADOR_CLASSE AND aninhamento
Rule 10    aninhamento -> conteudo_aninhamento
Rule 11    aninhamento -> LPAREN conteudo_aninhamento OR conteudo_aninhamento RPAREN
Rule 12    aninhamento -> LPAREN aninhamento RPAREN
Rule 13    aninhamento -> conteudo_aninhamento AND aninhamento
Rule 14    conteudo_aninhamento -> LPAREN IDENTIFICADOR_PROPRIEDADE restricao_propriedade conteudo_aninhamento_pos RPAREN
Rule 15    conteudo_aninhamento -> LPAREN IDENTIFICADOR_PROPRIEDADE MIN CARDINALIDADE conteudo_aninhamento_pos RPAREN
Rule 16    conteudo_aninhamento -> LPAREN IDENTIFICADOR_PROPRIEDADE restricao_propriedade conteudo_aninhamento RPAREN
Rule 17    conteudo_aninhamento_pos -> IDENTIFICADOR_CLASSE
Rule 18    conteudo_aninhamento_pos -> NAMESPACE TIPO_DADO
Rule 19    conteudo_aninhamento_pos -> LPAREN identificadores_classe_or RPAREN
Rule 20    conteudo_aninhamento_pos -> NAMESPACE TIPO_DADO SIMBOLO_ESPECIAL operador_relacional cardinalidade_com_sem_aspas_simples SIMBOLO_ESPECIAL
Rule 21    operador_relacional -> MAIOR
Rule 22    operador_relacional -> MENOR
Rule 23    operador_relacional -> MAIORIGUAL
Rule 24    operador_relacional -> MENORIGUAL
Rule 25    cardinalidade_com_sem_aspas_simples -> CARDINALIDADE
Rule 26    cardinalidade_com_sem_aspas_simples -> SIMBOLO_ESPECIAL CARDINALIDADE SIMBOLO_ESPECIAL
Rule 27    identificadores_classe_sequencia -> IDENTIFICADOR_CLASSE
Rule 28    identificadores_classe_sequencia -> identificadores_classe_sequencia SIMBOLO_ESPECIAL IDENTIFICADOR_CLASSE
Rule 29    identificadores_classe_or -> IDENTIFICADOR_CLASSE
Rule 30    identificadores_classe_or -> identificadores_classe_or OR IDENTIFICADOR_CLASSE
Rule 31    restricao_propriedade -> ONLY
Rule 32    restricao_propriedade -> SOME
Rule 33    restricao_propriedade -> VALUE

Terminals, with rules where they appear

ALL                  : 
AND                  : 9 13
CARDINALIDADE        : 15 25 26
CLASS                : 3
DISJOINTCLASSES      : 
DISJOINTWITH         : 
EQUIVALENTTO         : 3
EXACTLY              : 
IDENTIFICADOR_CLASSE : 3 9 17 27 28 29 30
IDENTIFICADOR_INDIVIDUO : 
IDENTIFICADOR_PROPRIEDADE : 14 15 16
INDIVIDUALS          : 
LPAREN               : 11 12 14 15 16 19
MAIOR                : 21
MAIORIGUAL           : 23
MAX                  : 
MENOR                : 22
MENORIGUAL           : 24
MIN                  : 15
NAMESPACE            : 18 20
NOT                  : 
ONLY                 : 31
OR                   : 11 30
RPAREN               : 11 12 14 15 16 19
SIMBOLO_ESPECIAL     : 7 7 20 20 26 26 28
SOME                 : 32
SUBCLASSOF           : 
THAT                 : 
TIPO_DADO            : 18 20
VALUE                : 33
error                : 

Nonterminals, with rules where they appear

aninhamento          : 9 12 13
cardinalidade_com_sem_aspas_simples : 20
classe_aninhada      : 6
classe_coberta       : 5
classe_enumerada     : 4
conteudo_aninhamento : 10 11 11 13 16
conteudo_aninhamento_pos : 14 15
declaracao_classe_definida : 1 2
identificadores_classe_or : 19 30
identificadores_classe_sequencia : 7 8 28
ontologia            : 2 0
operador_relacional  : 20
restricao_propriedade : 14 16
tipo_classe_definida : 3

Parsing method: LALR

state 0

    (0) S' -> . ontologia
    (1) ontologia -> . declaracao_classe_definida
    (2) ontologia -> . ontologia declaracao_classe_definida
    (3) declaracao_classe_definida -> . CLASS IDENTIFICADOR_CLASSE EQUIVALENTTO tipo_classe_definida

    CLASS           shift and go to state 3

    ontologia                      shift and go to state 1
    declaracao_classe_definida     shift and go to state 2

state 1

    (0) S' -> ontologia .
    (2) ontologia -> ontologia . declaracao_classe_definida
    (3) declaracao_classe_definida -> . CLASS IDENTIFICADOR_CLASSE EQUIVALENTTO tipo_classe_definida

    CLASS           shift and go to state 3

    declaracao_classe_definida     shift and go to state 4

state 2

    (1) ontologia -> declaracao_classe_definida .

    CLASS           reduce using rule 1 (ontologia -> declaracao_classe_definida .)
    $end            reduce using rule 1 (ontologia -> declaracao_classe_definida .)


state 3

    (3) declaracao_classe_definida -> CLASS . IDENTIFICADOR_CLASSE EQUIVALENTTO tipo_classe_definida

    IDENTIFICADOR_CLASSE shift and go to state 5


state 4

    (2) ontologia -> ontologia declaracao_classe_definida .

    CLASS           reduce using rule 2 (ontologia -> ontologia declaracao_classe_definida .)
    $end            reduce using rule 2 (ontologia -> ontologia declaracao_classe_definida .)


state 5

    (3) declaracao_classe_definida -> CLASS IDENTIFICADOR_CLASSE . EQUIVALENTTO tipo_classe_definida

    EQUIVALENTTO    shift and go to state 6


state 6

    (3) declaracao_classe_definida -> CLASS IDENTIFICADOR_CLASSE EQUIVALENTTO . tipo_classe_definida
    (4) tipo_classe_definida -> . classe_enumerada
    (5) tipo_classe_definida -> . classe_coberta
    (6) tipo_classe_definida -> . classe_aninhada
    (7) classe_enumerada -> . SIMBOLO_ESPECIAL identificadores_classe_sequencia SIMBOLO_ESPECIAL
    (8) classe_coberta -> . identificadores_classe_sequencia
    (9) classe_aninhada -> . IDENTIFICADOR_CLASSE AND aninhamento
    (27) identificadores_classe_sequencia -> . IDENTIFICADOR_CLASSE
    (28) identificadores_classe_sequencia -> . identificadores_classe_sequencia SIMBOLO_ESPECIAL IDENTIFICADOR_CLASSE

    SIMBOLO_ESPECIAL shift and go to state 12
    IDENTIFICADOR_CLASSE shift and go to state 7

    tipo_classe_definida           shift and go to state 8
    classe_enumerada               shift and go to state 9
    classe_coberta                 shift and go to state 10
    classe_aninhada                shift and go to state 11
    identificadores_classe_sequencia shift and go to state 13

state 7

    (9) classe_aninhada -> IDENTIFICADOR_CLASSE . AND aninhamento
    (27) identificadores_classe_sequencia -> IDENTIFICADOR_CLASSE .

    AND             shift and go to state 14
    SIMBOLO_ESPECIAL reduce using rule 27 (identificadores_classe_sequencia -> IDENTIFICADOR_CLASSE .)
    CLASS           reduce using rule 27 (identificadores_classe_sequencia -> IDENTIFICADOR_CLASSE .)
    $end            reduce using rule 27 (identificadores_classe_sequencia -> IDENTIFICADOR_CLASSE .)


state 8

    (3) declaracao_classe_definida -> CLASS IDENTIFICADOR_CLASSE EQUIVALENTTO tipo_classe_definida .

    CLASS           reduce using rule 3 (declaracao_classe_definida -> CLASS IDENTIFICADOR_CLASSE EQUIVALENTTO tipo_classe_definida .)
    $end            reduce using rule 3 (declaracao_classe_definida -> CLASS IDENTIFICADOR_CLASSE EQUIVALENTTO tipo_classe_definida .)


state 9

    (4) tipo_classe_definida -> classe_enumerada .

    CLASS           reduce using rule 4 (tipo_classe_definida -> classe_enumerada .)
    $end            reduce using rule 4 (tipo_classe_definida -> classe_enumerada .)


state 10

    (5) tipo_classe_definida -> classe_coberta .

    CLASS           reduce using rule 5 (tipo_classe_definida -> classe_coberta .)
    $end            reduce using rule 5 (tipo_classe_definida -> classe_coberta .)


state 11

    (6) tipo_classe_definida -> classe_aninhada .

    CLASS           reduce using rule 6 (tipo_classe_definida -> classe_aninhada .)
    $end            reduce using rule 6 (tipo_classe_definida -> classe_aninhada .)


state 12

    (7) classe_enumerada -> SIMBOLO_ESPECIAL . identificadores_classe_sequencia SIMBOLO_ESPECIAL
    (27) identificadores_classe_sequencia -> . IDENTIFICADOR_CLASSE
    (28) identificadores_classe_sequencia -> . identificadores_classe_sequencia SIMBOLO_ESPECIAL IDENTIFICADOR_CLASSE

    IDENTIFICADOR_CLASSE shift and go to state 16

    identificadores_classe_sequencia shift and go to state 15

state 13

    (8) classe_coberta -> identificadores_classe_sequencia .
    (28) identificadores_classe_sequencia -> identificadores_classe_sequencia . SIMBOLO_ESPECIAL IDENTIFICADOR_CLASSE

    CLASS           reduce using rule 8 (classe_coberta -> identificadores_classe_sequencia .)
    $end            reduce using rule 8 (classe_coberta -> identificadores_classe_sequencia .)
    SIMBOLO_ESPECIAL shift and go to state 17


state 14

    (9) classe_aninhada -> IDENTIFICADOR_CLASSE AND . aninhamento
    (10) aninhamento -> . conteudo_aninhamento
    (11) aninhamento -> . LPAREN conteudo_aninhamento OR conteudo_aninhamento RPAREN
    (12) aninhamento -> . LPAREN aninhamento RPAREN
    (13) aninhamento -> . conteudo_aninhamento AND aninhamento
    (14) conteudo_aninhamento -> . LPAREN IDENTIFICADOR_PROPRIEDADE restricao_propriedade conteudo_aninhamento_pos RPAREN
    (15) conteudo_aninhamento -> . LPAREN IDENTIFICADOR_PROPRIEDADE MIN CARDINALIDADE conteudo_aninhamento_pos RPAREN
    (16) conteudo_aninhamento -> . LPAREN IDENTIFICADOR_PROPRIEDADE restricao_propriedade conteudo_aninhamento RPAREN

    LPAREN          shift and go to state 20

    aninhamento                    shift and go to state 18
    conteudo_aninhamento           shift and go to state 19

state 15

    (7) classe_enumerada -> SIMBOLO_ESPECIAL identificadores_classe_sequencia . SIMBOLO_ESPECIAL
    (28) identificadores_classe_sequencia -> identificadores_classe_sequencia . SIMBOLO_ESPECIAL IDENTIFICADOR_CLASSE

    SIMBOLO_ESPECIAL shift and go to state 21


state 16

    (27) identificadores_classe_sequencia -> IDENTIFICADOR_CLASSE .

    SIMBOLO_ESPECIAL reduce using rule 27 (identificadores_classe_sequencia -> IDENTIFICADOR_CLASSE .)


state 17

    (28) identificadores_classe_sequencia -> identificadores_classe_sequencia SIMBOLO_ESPECIAL . IDENTIFICADOR_CLASSE

    IDENTIFICADOR_CLASSE shift and go to state 22


state 18

    (9) classe_aninhada -> IDENTIFICADOR_CLASSE AND aninhamento .

    CLASS           reduce using rule 9 (classe_aninhada -> IDENTIFICADOR_CLASSE AND aninhamento .)
    $end            reduce using rule 9 (classe_aninhada -> IDENTIFICADOR_CLASSE AND aninhamento .)


state 19

    (10) aninhamento -> conteudo_aninhamento .
    (13) aninhamento -> conteudo_aninhamento . AND aninhamento

    CLASS           reduce using rule 10 (aninhamento -> conteudo_aninhamento .)
    $end            reduce using rule 10 (aninhamento -> conteudo_aninhamento .)
    RPAREN          reduce using rule 10 (aninhamento -> conteudo_aninhamento .)
    AND             shift and go to state 23


state 20

    (11) aninhamento -> LPAREN . conteudo_aninhamento OR conteudo_aninhamento RPAREN
    (12) aninhamento -> LPAREN . aninhamento RPAREN
    (14) conteudo_aninhamento -> LPAREN . IDENTIFICADOR_PROPRIEDADE restricao_propriedade conteudo_aninhamento_pos RPAREN
    (15) conteudo_aninhamento -> LPAREN . IDENTIFICADOR_PROPRIEDADE MIN CARDINALIDADE conteudo_aninhamento_pos RPAREN
    (16) conteudo_aninhamento -> LPAREN . IDENTIFICADOR_PROPRIEDADE restricao_propriedade conteudo_aninhamento RPAREN
    (14) conteudo_aninhamento -> . LPAREN IDENTIFICADOR_PROPRIEDADE restricao_propriedade conteudo_aninhamento_pos RPAREN
    (15) conteudo_aninhamento -> . LPAREN IDENTIFICADOR_PROPRIEDADE MIN CARDINALIDADE conteudo_aninhamento_pos RPAREN
    (16) conteudo_aninhamento -> . LPAREN IDENTIFICADOR_PROPRIEDADE restricao_propriedade conteudo_aninhamento RPAREN
    (10) aninhamento -> . conteudo_aninhamento
    (11) aninhamento -> . LPAREN conteudo_aninhamento OR conteudo_aninhamento RPAREN
    (12) aninhamento -> . LPAREN aninhamento RPAREN
    (13) aninhamento -> . conteudo_aninhamento AND aninhamento

    IDENTIFICADOR_PROPRIEDADE shift and go to state 27
    LPAREN          shift and go to state 24

    conteudo_aninhamento           shift and go to state 25
    aninhamento                    shift and go to state 26

state 21

    (7) classe_enumerada -> SIMBOLO_ESPECIAL identificadores_classe_sequencia SIMBOLO_ESPECIAL .
    (28) identificadores_classe_sequencia -> identificadores_classe_sequencia SIMBOLO_ESPECIAL . IDENTIFICADOR_CLASSE

    CLASS           reduce using rule 7 (classe_enumerada -> SIMBOLO_ESPECIAL identificadores_classe_sequencia SIMBOLO_ESPECIAL .)
    $end            reduce using rule 7 (classe_enumerada -> SIMBOLO_ESPECIAL identificadores_classe_sequencia SIMBOLO_ESPECIAL .)
    IDENTIFICADOR_CLASSE shift and go to state 22


state 22

    (28) identificadores_classe_sequencia -> identificadores_classe_sequencia SIMBOLO_ESPECIAL IDENTIFICADOR_CLASSE .

    SIMBOLO_ESPECIAL reduce using rule 28 (identificadores_classe_sequencia -> identificadores_classe_sequencia SIMBOLO_ESPECIAL IDENTIFICADOR_CLASSE .)
    CLASS           reduce using rule 28 (identificadores_classe_sequencia -> identificadores_classe_sequencia SIMBOLO_ESPECIAL IDENTIFICADOR_CLASSE .)
    $end            reduce using rule 28 (identificadores_classe_sequencia -> identificadores_classe_sequencia SIMBOLO_ESPECIAL IDENTIFICADOR_CLASSE .)


state 23

    (13) aninhamento -> conteudo_aninhamento AND . aninhamento
    (10) aninhamento -> . conteudo_aninhamento
    (11) aninhamento -> . LPAREN conteudo_aninhamento OR conteudo_aninhamento RPAREN
    (12) aninhamento -> . LPAREN aninhamento RPAREN
    (13) aninhamento -> . conteudo_aninhamento AND aninhamento
    (14) conteudo_aninhamento -> . LPAREN IDENTIFICADOR_PROPRIEDADE restricao_propriedade conteudo_aninhamento_pos RPAREN
    (15) conteudo_aninhamento -> . LPAREN IDENTIFICADOR_PROPRIEDADE MIN CARDINALIDADE conteudo_aninhamento_pos RPAREN
    (16) conteudo_aninhamento -> . LPAREN IDENTIFICADOR_PROPRIEDADE restricao_propriedade conteudo_aninhamento RPAREN

    LPAREN          shift and go to state 20

    conteudo_aninhamento           shift and go to state 19
    aninhamento                    shift and go to state 28

state 24

    (14) conteudo_aninhamento -> LPAREN . IDENTIFICADOR_PROPRIEDADE restricao_propriedade conteudo_aninhamento_pos RPAREN
    (15) conteudo_aninhamento -> LPAREN . IDENTIFICADOR_PROPRIEDADE MIN CARDINALIDADE conteudo_aninhamento_pos RPAREN
    (16) conteudo_aninhamento -> LPAREN . IDENTIFICADOR_PROPRIEDADE restricao_propriedade conteudo_aninhamento RPAREN
    (11) aninhamento -> LPAREN . conteudo_aninhamento OR conteudo_aninhamento RPAREN
    (12) aninhamento -> LPAREN . aninhamento RPAREN
    (14) conteudo_aninhamento -> . LPAREN IDENTIFICADOR_PROPRIEDADE restricao_propriedade conteudo_aninhamento_pos RPAREN
    (15) conteudo_aninhamento -> . LPAREN IDENTIFICADOR_PROPRIEDADE MIN CARDINALIDADE conteudo_aninhamento_pos RPAREN
    (16) conteudo_aninhamento -> . LPAREN IDENTIFICADOR_PROPRIEDADE restricao_propriedade conteudo_aninhamento RPAREN
    (10) aninhamento -> . conteudo_aninhamento
    (11) aninhamento -> . LPAREN conteudo_aninhamento OR conteudo_aninhamento RPAREN
    (12) aninhamento -> . LPAREN aninhamento RPAREN
    (13) aninhamento -> . conteudo_aninhamento AND aninhamento

    IDENTIFICADOR_PROPRIEDADE shift and go to state 27
    LPAREN          shift and go to state 24

    conteudo_aninhamento           shift and go to state 25
    aninhamento                    shift and go to state 26

state 25

    (11) aninhamento -> LPAREN conteudo_aninhamento . OR conteudo_aninhamento RPAREN
    (10) aninhamento -> conteudo_aninhamento .
    (13) aninhamento -> conteudo_aninhamento . AND aninhamento

    OR              shift and go to state 29
    RPAREN          reduce using rule 10 (aninhamento -> conteudo_aninhamento .)
    AND             shift and go to state 23


state 26

    (12) aninhamento -> LPAREN aninhamento . RPAREN

    RPAREN          shift and go to state 30


state 27

    (14) conteudo_aninhamento -> LPAREN IDENTIFICADOR_PROPRIEDADE . restricao_propriedade conteudo_aninhamento_pos RPAREN
    (15) conteudo_aninhamento -> LPAREN IDENTIFICADOR_PROPRIEDADE . MIN CARDINALIDADE conteudo_aninhamento_pos RPAREN
    (16) conteudo_aninhamento -> LPAREN IDENTIFICADOR_PROPRIEDADE . restricao_propriedade conteudo_aninhamento RPAREN
    (31) restricao_propriedade -> . ONLY
    (32) restricao_propriedade -> . SOME
    (33) restricao_propriedade -> . VALUE

    MIN             shift and go to state 32
    ONLY            shift and go to state 33
    SOME            shift and go to state 34
    VALUE           shift and go to state 35

    restricao_propriedade          shift and go to state 31

state 28

    (13) aninhamento -> conteudo_aninhamento AND aninhamento .

    CLASS           reduce using rule 13 (aninhamento -> conteudo_aninhamento AND aninhamento .)
    $end            reduce using rule 13 (aninhamento -> conteudo_aninhamento AND aninhamento .)
    RPAREN          reduce using rule 13 (aninhamento -> conteudo_aninhamento AND aninhamento .)


state 29

    (11) aninhamento -> LPAREN conteudo_aninhamento OR . conteudo_aninhamento RPAREN
    (14) conteudo_aninhamento -> . LPAREN IDENTIFICADOR_PROPRIEDADE restricao_propriedade conteudo_aninhamento_pos RPAREN
    (15) conteudo_aninhamento -> . LPAREN IDENTIFICADOR_PROPRIEDADE MIN CARDINALIDADE conteudo_aninhamento_pos RPAREN
    (16) conteudo_aninhamento -> . LPAREN IDENTIFICADOR_PROPRIEDADE restricao_propriedade conteudo_aninhamento RPAREN

    LPAREN          shift and go to state 36

    conteudo_aninhamento           shift and go to state 37

state 30
